# grin-portal-client

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
config/: env.py
src/grin_portal_client/: Answer.py  Question.py  ShinySolver.py  __init__.py  __main__.py  main.py  websocket.py
