[tool.poetry]
name = "grin-portal-client"
version = "1.0.0"
description = "A Python client to query data from grin-portal via WebSocket communication."
authors = ["Lukas Westholt <support@lukaswestholt.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/"
keywords = ["shiny", "python", "api", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [
  { include = "grin_portal_client", from = "src" },
]

# Define the entry point here
[tool.poetry.scripts]
grin-portal-client = "grin_portal_client.main:main"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "7.0.0"
mypy = "^1.14.1"
pre-commit = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
